--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -6,15 +6,11 @@ elixir_version=1.12.2
 
 # Always rebuild from scratch on every deploy?
 always_rebuild=false
-
 # A command to run right before fetching dependencies
 # hook_pre_fetch_dependencies="pwd"
 
 # A command to run right before compiling the app (after elixir, .etc)
 # hook_pre_compile="pwd"
 
-# A command to run right after compiling the app
-hook_post_compile="./heroku/hook_post_compile.sh"
-
 # Set the path the app is run from
-runtime_path=/app
+#runtime_path=/app
