--- a/phoenix_static_buildpack.config
+++ b/phoenix_static_buildpack.config
@@ -1,10 +1,10 @@
 # Clean out cache contents from previous deploys
-clean_cache=true
+#clean_cache=true
 
 # We can change the filename for the compile script with this option
-compile="compile"
+#compile="compile"
 
 node_version=10.20.1
 
 # Remove node and node_modules directory to keep slug size down if it is not needed.
-remove_node=false
+# remove_node=false
